Seo y SASS 2 aplicados correctamente

--- a/html/menu.html
+++ b/html/menu.html
@@ -9,14 +9,23 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!--Link css -->
     <link rel="stylesheet" href="../css/estilos.css">
-    <title>Menu</title>
+    <!-- shortcut icon -->
+    <link rel="shortcut icon" href="../img/Utiles/newLogoRedLight.png">
+    <!-- title of page -->
+    <title>PIZZA PARTY / Mira nuestro menu online</title>
+    <meta name="description"
+        content="Para que vayas sabiendo que ordenar visita nuestro menu online. Cuenta con todo nuestro catalogo de platillos">
+    <meta name="author" content="Lucas Vasquez">
+    <meta name="keywords"
+        content="Pizza Party ,pizza, empanada , minuta , postre ,bebida, menu online">
 </head>
 
 <body>
     <nav class="navbar bg-light sticky-top nav_shadow">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="../img/Utiles/newLogoRed.png" class="logo" alt="logo"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../img/Utiles/newLogoRed.png" class="logo" alt="logo"></a>
             <h5 class="nav_titleDesktop ">Pizza Party</h5>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
                 aria-controls="offcanvasNavbar">
@@ -40,7 +49,7 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle color_white" href="#" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                Menu
+                                Menú
                             </a>
                             <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="#pizza">Pizza</a></li>
@@ -65,7 +74,7 @@
                             </ul>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link active color_white" href="opinion.html">Opinion</a>
+                            <a class="nav-link active color_white" href="opinion.html">Opinión</a>
                         </li>
                     </ul>
                 </div>
@@ -74,8 +83,8 @@
     </nav>
     <!--End Nav-->
     <main>
-        <h1 class="text-center my-3 color_title">Menu</h1>
-        <Section class="set_menu container-xxl bg-light p-4 my-2 " id="pizza">
+        <h1 class="text-center my-3 color_title">Menú</h1>
+        <Section class="set_menu container-xxl bg-light" id="pizza">
             <h2 class="text-center">Pizzas</h2>
             <div class="row w-100 mx-auto row_gap text-center cards_menu">
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
@@ -83,7 +92,7 @@
                         <img src="../img/Pizzas/pizza_muzzarela.jpg" class="card-img-top" alt="Pizza de muzzarella">
                         <div class="card-body ">
                             <h5>Pizza de muzzarella</h5>
-                            <p class="card-text ">Clasica pizza de muzzarella y salsa</p>
+                            <p class="card-text ">Clásicas pizza de muzzarella y salsa</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -91,8 +100,8 @@
                     <div class="card">
                         <img src="../img/Pizzas/pizza_jamon.jpg" class="card-img-top" alt="Pizza de Jamon y Queso">
                         <div class="card-body">
-                            <h5>Pizza de Jamon y muzza</h5>
-                            <p class="card-text ">Clasica pizza de muzzarella y jamon</p>
+                            <h5>Pizza de Jamón y muzza</h5>
+                            <p class="card-text ">Clásica pizza de muzzarella y jamón</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -101,7 +110,7 @@
                         <img src="../img/Pizzas/pizza_napo.jpg" class="card-img-top" alt="Pizza de napolitana">
                         <div class="card-body">
                             <h5>Pizza de napolitana</h5>
-                            <p class="card-text ">Clasica pizza muzzarella,tomate,peregil y ajo</p>
+                            <p class="card-text ">Clásica pizza muzzarella,tomate,perejil y ajo</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -110,7 +119,7 @@
                         <img src="../img/Pizzas/pizza_fugazzeta.jpg" class="card-img-top" alt="Pizza de fugazzeta">
                         <div class="card-body">
                             <h5>Pizza de fugazzeta</h5>
-                            <p class="card-text ">Clasica pizza muzzarella y cebolla</p>
+                            <p class="card-text ">Clásica pizza muzzarella y cebolla</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -119,7 +128,7 @@
                         <img src="../img/Pizzas/pizza_peperoni.png" class="card-img-top" alt="Pizza de peperoni">
                         <div class="card-body">
                             <h5>Pizza de peperoni</h5>
-                            <p class="card-text ">Clasica pizza muzzarella y peperoni</p>
+                            <p class="card-text ">Clásica pizza muzzarella y peperoni</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -129,7 +138,7 @@
                             alt="Pizza de la casa">
                         <div class="card-body">
                             <h5>Pizza de especial de la casa</h5>
-                            <p class="card-text ">Especial muzza,jamon,morron,huevo y queso</p>
+                            <p class="card-text ">Especial muzza,jamón, morrón, huevo y queso</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -137,7 +146,7 @@
         </Section>
         <!--End Section-->
 
-        <Section class="set_menu container-xxl bg-light p-4 my-2 " id="empanada">
+        <Section class="set_menu container-xxl bg-light " id="empanada">
             <h2 class="text-center">Empanadas</h2>
             <div class="row w-100 mx-auto row_gap text-center cards_menu">
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
@@ -146,7 +155,7 @@
 
                         <div class="card-body">
                             <h5>Empanadas de carne</h5>
-                            <p class="card-text ">Clasicas Empanadas de carne molida,papa,etc</p>
+                            <p class="card-text ">Clásicas Empanadas de carne molida, papa ,etc</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -156,7 +165,7 @@
 
                         <div class="card-body">
                             <h5>Empanadas de pollo</h5>
-                            <p class="card-text ">Clasicas empanadas de pollo desmenuzado</p>
+                            <p class="card-text ">Clásicas empanadas de pollo desmenuzado</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -166,8 +175,8 @@
                             class="card-img-top">
 
                         <div class="card-body">
-                            <h5>Empanadas de jamon y queso</h5>
-                            <p class="card-text ">Clasicas empanadas de jamon y muzzarella</p>
+                            <h5>Empanadas de jamón y queso</h5>
+                            <p class="card-text ">Clásicas empanadas de jamon y muzzarella</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -177,7 +186,7 @@
 
                         <div class="card-body">
                             <h5>Empanadas de humita</h5>
-                            <p class="card-text ">Clasicas empanadas de choclo</p>
+                            <p class="card-text ">Clásicas empanadas de choclo</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -188,14 +197,14 @@
 
                         <div class="card-body">
                             <h5>Empanadas salteñas</h5>
-                            <p class="card-text ">Clasicas empanadas de carne cortada a cuchillo</p>
+                            <p class="card-text ">Clásicas empanadas de carne cortada a cuchillo</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
             </div>
         </section><!-- End Section -->
 
-        <Section class="set_menu container-xxl bg-light p-4 my-2 " id="minuta">
+        <Section class="set_menu container-xxl bg-light" id="minuta">
             <h2 class="text-center">Minutas</h2>
             <div class="row w-100 mx-auto row_gap text-center cards_menu">
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
@@ -204,7 +213,7 @@
                             class="card-img-top">
                         <div class="card-body">
                             <h5>milanesa napolitana con fritas</h5>
-                            <p class="card-text ">milanesa con jamon y muzza con guarnicion de papas fritas</p>
+                            <p class="card-text ">milanesa con jamón y muzza con guarnición de papas fritas</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -213,7 +222,7 @@
                         <img src="../img/Minutas/milanes_pure.jpg" alt="milanesa con pure " class="card-img-top">
                         <div class="card-body">
                             <h5>milanesa napolitana con pure</h5>
-                            <p class="card-text ">milanesa al horno con guarnicion de pure</p>
+                            <p class="card-text ">milanesa al horno con guarnición de pure</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -223,7 +232,7 @@
                             class="card-img-top">
                         <div class="card-body">
                             <h5>milanesa con ensalada</h5>
-                            <p class="card-text ">milanesa al horno guarnicion de tomate y lechuga</p>
+                            <p class="card-text ">milanesa al horno guarnición de tomate y lechuga</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
@@ -232,8 +241,8 @@
                         <img src="../img/Minutas/sandwich_milanesaC.jpg" alt="Sandwich de milanesa completo"
                             class="card-img-top">
                         <div class="card-body">
-                            <h5>Sandwich de milanesa completo</h5>
-                            <p class="card-text ">Sandwich de milanesa con tomate,lechuga,jamon y queso , con guarnicion
+                            <h5>Sándwich de milanesa completo</h5>
+                            <p class="card-text ">Sándwich de milanesa con tomate, lechuga, jamón y queso, con guarnición
                                 de fritas</p>
                         </div>
                     </div>
@@ -244,15 +253,15 @@
                             class="card-img-top">
                         <div class="card-body">
                             <h5>hamburguesa completa</h5>
-                            <p class="card-text ">hamburguesa con tomate,lechuga,cebolla morada,jamon y queso chedar,
-                                con guarnicion de fritas</p>
+                            <p class="card-text ">hamburguesa con tomate, lechuga, cebolla, morada, jamón y queso chédar,
+                                con guarnición de fritas</p>
                         </div>
                     </div>
                 </div><!-- End Card -->
             </div>
         </section><!-- End Section -->
 
-        <section class="set_menu container-xxl bg-light p-4 my-2 " id="postre">
+        <section class="set_menu container-xxl bg-light " id="postre">
             <h2 class="text-center">Postres</h2>
             <div class="row w-100 mx-auto row_gap text-center cards_menu">
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
@@ -278,14 +287,14 @@
                         <img src="../img/Postres/banana_split.jpg" alt="banana split">
                         <div class="card-body">
                             <h5>banana split</h5>
-                            <p class="card-text ">banana , cereza y helado de vainilla, chocolate, frutilla ,con crema y chocolate liquido</p>
+                            <p class="card-text ">banana, cereza y helado de vainilla, chocolate, frutilla, con crema y chocolate liquido</p>
                         </div>
                     </div>
                 </div><!-- End card -->
             </div><!-- End row -->
         </section><!-- End Section -->
 
-        <section class="set_menu container-xxl bg-light p-4 my-2 " id="bebida">
+        <section class="set_menu container-xxl bg-light" id="bebida">
             <h2 class="text-center">Bebidas</h2>
             <div class="row w-100 mx-auto row_gap text-center cards_menu">
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
@@ -363,7 +372,7 @@
             </div><!-- End row -->
         </section><!-- End Section -->
 
-        <section class="set_menu container-xxl bg-light p-4 my-2 " id="descuento">
+        <section class="set_menu container-xxl bg-light" id="descuento">
             <h2 class="text-center">Descuentos</h2>
             <div class="row w-100 mx-auto row_gap text-center cards_menu">
                 <div class="col-sm-6 col-md-4 col-lg-3 ">
@@ -371,7 +380,7 @@
                         <img src="../img/Promociones/cupon.png" alt="">
                         <div class="card-body">
                             <h5>Oferta del blackFriday</h5>
-                            <p class="card-text ">Oferta unica por el dia</p>
+                            <p class="card-text ">Oferta única por el día</p>
                         </div>
                     </div>
                 </div><!-- End card -->
@@ -380,7 +389,7 @@
                         <img src="../img/Promociones/descuento_pedido.png" alt="">
                         <div class="card-body">
                             <h5>Descuento del 30%</h5>
-                            <p class="card-text ">Solo aplicable en la sucursal av.xxxxxx por el dia de la pizza</p>
+                            <p class="card-text ">Solo aplicable en la sucursal av.xxxxxx por el día de la pizza</p>
                         </div>
                     </div>
                 </div><!-- End card -->
@@ -390,17 +399,53 @@
     <!--End Main-->
 
     <footer class="footer container-fluid " id="redes">
-        <p class="footer_titulo fs-2 ">Redes Sociales</p>
-        <div class="redes fs-4 gap-3">
-            <a href="#" class="footer_redes" id="insta">Instagram <img class="footer_img"
-                    src="../img/iconos/instagram.png" alt="icono de instagram"></a>
+
+        <div class="footer_container ">
+          <div class="link_containers">
+            <div>
+              <p class="footer_titulo  ">Links</p>
+              <ul class="fs-5">
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="sucursal.html">Sucursales</a></li>
+                <li><a href="opinion.html">Opinión</a></li>
+              </ul>
+            </div>
+            <div>
+              <p class="footer_titulo ">Menú</p>
+              <ul class="fs-5">
+                <li><a href="#pizza">Pizza</a></li>
+                <li><a href="#empanada">Empanadas</a></li>
+                <li><a href="#minuta">Minutas</a></li>
+                <li><a href="#postre">Postres</a></li>
+                <li><a href="#bebida">Bebidas</a></li>
+                <li><a href="#descuento">Descuentos</a></li>
+              </ul>
+            </div>
+            <div>
+              <p class="footer_titulo ">
+                Delivery
+              </p>
+              <ul class="fs-5">
+                <li><a href="delivery.html#promos">Promociones</a></li>
+                <li><a href="delivery.html#pizza">Pizza</a></li>
+                <li><a href="delivery.html#empanada">Empanadas</a></li>
+                <li><a href="delivery.html#minuta">Minutas</a></li>
+                <li><a href="delivery.html#bebida">Bebida</a></li>
+              </ul>
+            </div>
+          </div>
+          <div class="redes fs-3 gap-2 link_containers">
+            <p class="footer_titulo text-center">Redes Sociales</p>
+            <a href="#" class="footer_redes" id="insta">Instagram <img class="footer_img" src="../img/iconos/instagram.png"
+                alt="icono de instagram"></a>
             <a href="#" class="footer_redes" id="face">Facebook <img class="footer_img" src="../img/iconos/facebook.png"
-                    alt="icono de facebook"></a>
+                alt="icono de facebook"></a>
             <a href="#" class="footer_redes" id="whatsapp">Whatsapp <img src="../img/iconos/whatsapp.png"
-                    alt="icono de whatsapp" class="footer_img"></a>
+                alt="icono de whatsapp" class="footer_img"></a>
+          </div>
         </div>
-        <p class="footer_text fs-5 my-2">© 2022 Vasquez — All rights reserved.</p>
-    </footer>
+        <p class="footer_text fs-5">© 2022 Vasquez — All rights reserved.</p>
+      </footer>
     <!--End Footer-->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
