--- a/html/sucursal.html
+++ b/html/sucursal.html
@@ -13,18 +13,19 @@
   <link rel="stylesheet" href="../css/estilos.css">
   <!-- shortcut icon -->
   <link rel="shortcut icon" href="../img/Utiles/newLogoRedLight.png">
+  <!-- title of page -->
   <title>PIZZA PARTY / Nuestras Sucursales</title>
   <!-- metas seo -->
   <meta name="description"
-    content="Tenemos Sucursales en todos los barrios de CABA. Encontranos en tu zona para probar la mejor pizza a la piedra.">
+    content="Tenemos Sucursales en Av.Callao, Av.Corrientes y Av.Córdoba. Encontradnos en tu zona más cercana para probar la mejor pizza a la piedra.">
   <meta name="author" content="Lucas Vasquez">
-  <meta name="keywords" content="Pizza , Empanadas, Delivery, Sucursales , Av.Corrientes ,Almagro">
+  <meta name="keywords" content="Pizza , Empanadas, Delivery, Sucursales , Av.Corrientes ,Almagro , Balvanera , Av.Callao , Av.Cordoba">
 </head>
 
 <body>
   <nav class="navbar bg-light sticky-top nav_shadow">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#"><img src="../img/Utiles/newLogoRed.png" class="logo" alt="logo"></a>
+      <a class="navbar-brand" href="../index.html"><img src="../img/Utiles/newLogoRed.png" class="logo" alt="logo"></a>
       <h5 class="nav_titleDesktop ">Pizza Party</h5>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
         aria-controls="offcanvasNavbar">
@@ -47,7 +48,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle color_white" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Menu
+                Menú
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="menu.html#pizza">Pizza</a></li>
@@ -72,7 +73,7 @@
               </ul>
             </li>
             <li class="nav-item ">
-              <a class="nav-link active color_white" href="opinion.html">Opinion</a>
+              <a class="nav-link active color_white" href="opinion.html">Opinión</a>
             </li>
           </ul>
         </div>
@@ -83,29 +84,29 @@
 
   <main>
     <h1 class="text-center my-1 color_title">Sucursales</h1>
-
-    <section class="container bg-grey p-4 my-3 ">
+    <section class="container p-4 my-3 sucursal" >
       <h2 class="text-center">Av.Callao</h2>
-      <div class="row align-items-center">
-        <div class="col-md-6 p-4 fs-4">
-          <p class="main_textSucursal">Numero de telefono: xxxx-xxxx</p>
-          <p class="main_textSucursal">Mail: xxxxxx@gmail.com</p>
-          <p class="main_textSucursal">horarios:lunes a viernes 09:00 AM a 23:00 PM </p>
-          <p class="main_textSucursal">Av.Corrientes 3701 </p>
-          <p class="main_textSucursal">Almagro</p>
-        </div>
-        <div class="col-md-6 "><iframe class="maps"
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6568.2500884346355!2d-58.39575584813441!3d-34.60099940667171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac18525ea95%3A0x472ebe89b6f58a03!2sLa%20Continental!5e0!3m2!1ses!2sar!4v1655426535660!5m2!1ses!2sar"
-            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div>
-      </div>
-    </section>
-    <!--End Section-->
-    <section class="container bg-grey p-4 my-3 ">
-      <h2 class="text-center">Av.Callao</h2>
-      <div class="row align-items-center">
+      <div class="row ">
         <div class="col-md-6 fs-4 p-4">
-          <p class="main_textSucursal">Numero de telefono: xxxx-xxxx</p>
+          <p class="main_textSucursal">Número de teléfono: xxxx-xxxx</p>
+          <p class="main_textSucursal">Mail: xxxxxx@gmail.com</p>
+          <p class="main_textSucursal">horarios:lunes a viernes 09:00 AM a 23:00 PM </p>
+          <p class="main_textSucursal">Av.Callao 348 </p>
+          <p class="main_textSucursal">Balvanera</p>
+        </div>
+        <div class="col-md-6 "><iframe class="maps"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6568.2500884346355!2d-58.39575584813441!3d-34.60099940667171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac18525ea95%3A0x472ebe89b6f58a03!2sLa%20Continental!5e0!3m2!1ses!2sar!4v1655426535660!5m2!1ses!2sar"
+            style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
+    </section>
+    
+    <!--End Section-->
+    <section class="container p-4 my-3 sucursal" >
+      <h2 class="text-center">Av.Corrientes</h2>
+      <div class="row ">
+        <div class="col-md-6 fs-4 p-4">
+          <p class="main_textSucursal">Número de teléfono: xxxx-xxxx</p>
           <p class="main_textSucursal">Mail: xxxxxx@gmail.com</p>
           <p class="main_textSucursal">horarios:lunes a viernes 09:00 AM a 23:00 PM </p>
           <p class="main_textSucursal">Av.Corrientes 3701 </p>
@@ -118,15 +119,15 @@
       </div>
     </section>
     <!--End Section-->
-    <section class="container bg-grey p-4 my-3 ">
-      <h2 class="text-center">Av.Callao</h2>
-      <div class="row align-items-center">
+    <section class="container sucursal p-4 my-3 ">
+      <h2 class="text-center">Av.Córdoba</h2>
+      <div class="row ">
         <div class="col-md-6 p-4 fs-4">
-          <p class="main_textSucursal">Numero de telefono: xxxx-xxxx</p>
+          <p class="main_textSucursal">Número de teléfono: xxxx-xxxx</p>
           <p class="main_textSucursal">Mail: xxxxxx@gmail.com</p>
           <p class="main_textSucursal">horarios:lunes a viernes 09:00 AM a 23:00 PM </p>
-          <p class="main_textSucursal">Av.Corrientes 3701 </p>
-          <p class="main_textSucursal">Almagro</p>
+          <p class="main_textSucursal">Av.Córdoba 2501 </p>
+          <p class="main_textSucursal">Balvanera</p>
         </div>
         <div class="col-md-6 "><iframe class="maps"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6568.2500884346355!2d-58.39575584813441!3d-34.60099940667171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bccac18525ea95%3A0x472ebe89b6f58a03!2sLa%20Continental!5e0!3m2!1ses!2sar!4v1655426535660!5m2!1ses!2sar"
@@ -147,11 +148,11 @@
           <ul class="fs-5">
             <li><a href="../index.html">Home</a></li>
             <li><a href="sucursal.html">Sucursales</a></li>
-            <li><a href="opinion.html">Opinion</a></li>
+            <li><a href="opinion.html">Opinión</a></li>
           </ul>
         </div>
         <div>
-          <p class="footer_titulo ">Menu</p>
+          <p class="footer_titulo ">Menú</p>
           <ul class="fs-5">
             <li><a href="menu.html#pizza">Pizza</a></li>
             <li><a href="menu.html#empanada">Empanadas</a></li>
@@ -175,7 +176,7 @@
         </div>
       </div>
       <div class="redes fs-3 gap-2 link_containers">
-        <p class="footer_titulo ">Redes Sociales</p>
+        <p class="footer_titulo text-center">Redes Sociales</p>
         <a href="#" class="footer_redes" id="insta">Instagram <img class="footer_img" src="../img/iconos/instagram.png"
             alt="icono de instagram"></a>
         <a href="#" class="footer_redes" id="face">Facebook <img class="footer_img" src="../img/iconos/facebook.png"
@@ -187,7 +188,6 @@
     <p class="footer_text fs-5">© 2022 Vasquez — All rights reserved.</p>
   </footer>
   <!--End Footer-->
-
 
 
   <!-- Optional JavaScript; choose one of the two! -->
