--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle color_white" href="#" role="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
-                Menu
+                Menú
               </a>
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="html/menu.html#pizza">Pizza</a></li>
@@ -73,7 +73,7 @@
               </ul>
             </li>
             <li class="nav-item ">
-              <a class="nav-link active color_white" href="html/opinion.html">Opinion</a>
+              <a class="nav-link active color_white" href="html/opinion.html">Opinión</a>
             </li>
           </ul>
         </div>
@@ -114,12 +114,12 @@
   </header>
   <!--End header-->
   <main>
-    <section class="container-fluid  my-3  mx-auto rounded-3 novedades">
+    <section class="container  my-3  mx-auto rounded-3 novedades">
       <h1 class="text-center color_title">Promociones</h1>
       <div class="row w-100 mx-auto row_gap text-center">
         <div class="col-sm-6 col-md-4 col-lg-3 ">
           <div class="card ">
-            <img src="img/Promociones/promocion_menu.jpg" class="card-img-top" alt="...">
+            <img src="img/Promociones/promocion_menu.jpg" class="card-img-top" alt="Promoción del menú">
             <div class="card-body">
               <p class="card-text">Solo en nuestras Sucursales 4 pizzas a 20 euros</p>
             </div>
@@ -129,7 +129,7 @@
 
         <div class="col-sm-6 col-md-4 col-lg-3 ">
           <div class="card ">
-            <img src="img/Promociones/promocion_delivery.png" class="card-img-top" alt="...">
+            <img src="img/Promociones/promocion_delivery.png" class="card-img-top" alt="Promoción de delivery">
             <div class="card-body">
               <p class="card-text">Solo por el Black Friday 2x1 en pizzas</p>
             </div>
@@ -139,7 +139,7 @@
 
         <div class="col-sm-6 col-md-4 col-lg-3 ">
           <div class="card">
-            <img src="img/Promociones/promo_2x1.png" class="card-img-top " alt="...">
+            <img src="img/Promociones/promo_2x1.png" class="card-img-top " alt="Promoción de sucursal ">
             <div class="card-body">
               <p class="card-text">2x1 En nuestra sucursal de av.xxxxxxxx</p>
             </div>
@@ -149,9 +149,9 @@
 
         <div class="col-sm-6 col-md-4 col-lg-3 ">
           <div class="card ">
-            <img src="img/Promociones/promo_jueves.png" class="card-img-top" alt="...">
+            <img src="img/Promociones/promo_jueves.png" class="card-img-top" alt="Promoción para dia de la pizza">
             <div class="card-body">
-              <p class="card-text">Solo por la noche de pizza venite a probar la mejor pizza</p>
+              <p class="card-text">Solo por la noche de pizza veni a probar la mejor pizza</p>
             </div>
           </div>
         </div>
@@ -165,19 +165,19 @@
       <div class="row px-auto ">
         <div class="col-5 col-sm-4 my-2 w-30">
           <div class="card ">
-            <a href="#"><img src="img/Utiles/delivery.png" class="card-img-top border-hover" alt=""></a>
+            <a href="#"><img src="img/Utiles/delivery.png" class="card-img-top" alt="Delivery"></a>
           </div>
         </div>
         <div class="col-5  col-sm-4 my-2 ">
-          <div class="card border ">
+          <div class="card">
             <a href="#">
-              <img src="img/Utiles/pedido_ya.png" class="card-img-top border" alt="...">
+              <img src="img/Utiles/pedido_ya.png" class="card-img-top" alt="logo de pedido ya">
             </a>
           </div>
         </div>
         <div class="col-5  col-sm-4 my-2 ">
           <div class="card ">
-            <a href="#"><img src="img/Utiles/rappi.png" class="card-img-top border" alt="..."></a>
+            <a href="#"><img src="img/Utiles/rappi.png" class="card-img-top " alt="logo de rappi"></a>
           </div>
         </div>
       </div>
@@ -194,11 +194,11 @@
           <ul class="fs-5">
             <li><a href="index.html">Home</a></li>
             <li><a href="/html/sucursal.html">Sucursales</a></li>
-            <li><a href="/html/opinion.html">Opinion</a></li>
+            <li><a href="/html/opinion.html">Opinión</a></li>
           </ul>
         </div>
         <div>
-          <p class="footer_titulo ">Menu</p>
+          <p class="footer_titulo ">Menú</p>
           <ul class="fs-5">
             <li><a href="/html/menu.html#pizza">Pizza</a></li>
             <li><a href="/html/menu.html#empanada">Empanadas</a></li>
@@ -222,7 +222,7 @@
         </div>
       </div>
       <div class="redes fs-3 gap-2 link_containers">
-        <p class="footer_titulo ">Redes Sociales</p>
+        <p class="footer_titulo text-center ">Redes Sociales</p>
         <a href="#" class="footer_redes" id="insta">Instagram <img class="footer_img" src="/img/iconos/instagram.png"
             alt="icono de instagram"></a>
         <a href="#" class="footer_redes" id="face">Facebook <img class="footer_img" src="/img/iconos/facebook.png"
